--- a/src/styling/style.css
+++ b/src/styling/style.css
@@ -148,16 +148,16 @@ body {
   color: hsl(20, 15%, 90%);
 }
 .nightMode .interfaceContainer .dashboardConsole main {
-  background-color: hsl(20, 10%, 20%);
+  background-color: hsl(20, 15%, 41%);
 }
 .nightMode .interfaceContainer .dashboardConsole main header section:nth-child(1) {
-  color: hsl(20, 10%, 41%);
+  color: hsl(20, 15%, 20%);
 }
 .nightMode .interfaceContainer .dashboardConsole main header section:nth-child(2) span:nth-child(1) {
-  color: hsl(20, 10%, 55%);
+  color: hsl(20, 15%, 20%);
 }
 .nightMode .interfaceContainer .dashboardConsole main header section:nth-child(2) span:nth-child(2) {
-  color: hsl(20, 10%, 76%);
+  color: hsl(20, 15%, 76%);
 }
 .nightMode .interfaceContainer .dashboardConsole main header section:nth-child(3) {
   background-color: hsl(20, 10%, 27%);
@@ -172,25 +172,25 @@ body {
   background-color: hsl(30, 60%, 55%);
 }
 .nightMode .interfaceContainer .dashboardConsole main header section:nth-child(5) {
-  background-color: hsl(20, 10%, 27%);
+  background-color: hsl(20, 15%, 27%);
 }
 .nightMode .interfaceContainer .dashboardConsole main header section:nth-child(5) button {
-  background-color: hsl(20, 15%, 41%);
-  color: hsl(20, 15%, 90%);
+  background-color: hsl(30, 40%, 62%);
+  color: hsl(30, 40%, 34%);
 }
 .nightMode .interfaceContainer .dashboardConsole main div .consoleDesk {
-  background-color: hsl(20, 10%, 41%);
-  color: hsl(20, 10%, 69%);
-  border: 4px solid hsl(20, 10%, 41%);
+  background-color: hsl(20, 15%, 27%);
+  color: hsl(20, 10%, 83%);
+  border: 4px solid hsl(20, 15%, 27%);
 }
 .nightMode .interfaceContainer .dashboardConsole main div .consoleDesk b {
-  color: hsl(20, 10%, 20%);
+  color: hsl(20, 10%, 55%);
 }
 .nightMode .interfaceContainer .dashboardConsole main div .consoleDesk hr {
   border: 1px solid hsl(20, 10%, 20%);
 }
 .nightMode .interfaceContainer .dashboardConsole main div .consoleDesk::-webkit-scrollbar-button {
-  background-color: hsl(20, 10%, 20%);
+  background-color: hsl(20, 15%, 41%);
 }
 .nightMode .interfaceContainer .dashboardConsole main div .consoleDesk::-webkit-scrollbar-thumb {
   background-color: hsl(20, 15%, 62%);
@@ -925,21 +925,21 @@ body {
   color: hsl(30, 60%, 90%);
 }
 .nightMode .interfaceContainer .helpDeskConsole main div .consoleDesk {
-  background-color: hsl(20, 10%, 41%);
-  color: hsl(20, 10%, 69%);
-  border: 4px solid hsl(20, 10%, 41%);
+  background-color: hsl(320, 25%, 62%);
+  color: hsl(320, 25%, 27%);
+  border: 4px solid hsl(320, 25%, 62%);
 }
 .nightMode .interfaceContainer .helpDeskConsole main div .consoleDesk b {
-  color: hsl(20, 10%, 20%);
+  color: hsl(320, 25%, 20%);
 }
 .nightMode .interfaceContainer .helpDeskConsole main div .consoleDesk hr {
-  border: 1px solid hsl(20, 10%, 20%);
+  border: 1px solid hsl(320, 25%, 20%);
 }
 .nightMode .interfaceContainer .helpDeskConsole main div .consoleDesk::-webkit-scrollbar-button {
-  background-color: hsl(20, 10%, 20%);
+  background-color: hsl(320, 25%, 20%);
 }
 .nightMode .interfaceContainer .helpDeskConsole main div .consoleDesk::-webkit-scrollbar-thumb {
-  background-color: hsl(20, 15%, 62%);
+  background-color: hsl(320, 25%, 90%);
 }
 .nightMode .interfaceContainer .helpDeskConsole main div .consoleSidebar {
   background-color: hsl(320, 25%, 34%);
@@ -1364,6 +1364,16 @@ body {
 .interfaceContainer main .userHeader section:nth-child(5) .console main header section:nth-child(5)::-webkit-scrollbar {
   display: none;
 }
+.interfaceContainer main .userHeader section:nth-child(5) .console main header section:nth-child(6) {
+  grid-area: consoleClose;
+  width: 30px;
+  height: 30px;
+}
+.interfaceContainer main .userHeader section:nth-child(5) .console main header section:nth-child(6) button {
+  width: 22px;
+  height: 22px;
+  margin: 4px;
+}
 .interfaceContainer main .userHeader section:nth-child(5) .console main div {
   grid-area: body;
   display: block;
@@ -1673,6 +1683,16 @@ body {
 .interfaceContainer main .mainscreen .secondaryInterface .console main header section:nth-child(5)::-webkit-scrollbar {
   display: none;
 }
+.interfaceContainer main .mainscreen .secondaryInterface .console main header section:nth-child(6) {
+  grid-area: consoleClose;
+  width: 30px;
+  height: 30px;
+}
+.interfaceContainer main .mainscreen .secondaryInterface .console main header section:nth-child(6) button {
+  width: 22px;
+  height: 22px;
+  margin: 4px;
+}
 .interfaceContainer main .mainscreen .secondaryInterface .console main div {
   grid-area: body;
   display: block;
@@ -1860,6 +1880,9 @@ body {
   z-index: 4;
   transition: width 1s;
 }
+.interfaceContainer main .mainscreen .primaryInterface .console {
+  transition: top 1s, left 1s, bottom 1s, right 1s;
+}
 .interfaceContainer main .mainscreen .primaryInterface .console main {
   position: absolute;
   display: grid;
@@ -1955,8 +1978,21 @@ body {
 .interfaceContainer main .mainscreen .primaryInterface .console main header section:nth-child(5) button:nth-child(1) {
   margin-left: 4px;
 }
+.interfaceContainer main .mainscreen .primaryInterface .console main header section:nth-child(5) button:last-child {
+  margin-right: 4px;
+}
 .interfaceContainer main .mainscreen .primaryInterface .console main header section:nth-child(5)::-webkit-scrollbar {
   display: none;
+}
+.interfaceContainer main .mainscreen .primaryInterface .console main header section:nth-child(6) {
+  grid-area: consoleClose;
+  width: 30px;
+  height: 30px;
+}
+.interfaceContainer main .mainscreen .primaryInterface .console main header section:nth-child(6) button {
+  width: 22px;
+  height: 22px;
+  margin: 4px;
 }
 .interfaceContainer main .mainscreen .primaryInterface .console main div {
   grid-area: body;
@@ -2317,11 +2353,11 @@ body {
   }
   .interfaceContainer .secondaryInterface .consoleSidebarOpen div .consoleDesk {
     width: calc(100% - 16px);
-    height: calc(50% - 12px);
+    height: calc(25% - 12px);
   }
   .interfaceContainer .secondaryInterface .consoleSidebarOpen div .consoleSidebar {
     width: calc(100% - 16px);
-    height: calc(50% - 16px);
+    height: calc(75% - 16px);
   }
   .interfaceContainer .secondaryInterface .consoleSidebarClosed div .consoleDesk {
     width: calc(100% - 16px);
@@ -2329,7 +2365,7 @@ body {
   }
   .interfaceContainer .secondaryInterface .consoleSidebarClosed div .consoleSidebar {
     width: calc(100% - 16px);
-    height: calc(50% - 16px);
+    height: calc(75% - 16px);
   }
   .interfaceContainer.secondaryInterfaceOpen main main section:nth-child(1) {
     width: 400px;
