--- a/src/styling/style.scss
+++ b/src/styling/style.scss
@@ -387,17 +387,17 @@ body {
         }
         .dashboardConsole {
             main {
-                background-color: $t0;
+                background-color: $tu3;
                 // border: 4px solid $t0;
                 header {
                     // Title
                     section:nth-child(1) {
-                        color: $t3;
+                        color: $tu0;
                     }
                     // Date and Time
                     section:nth-child(2) {
-                        span:nth-child(1) {color: $t5;}
-                        span:nth-child(2) {color: $t8;}
+                        span:nth-child(1) {color: $tu0;}
+                        span:nth-child(2) {color: $tu8;}
                     }
                     // Achievement Progress Bar
                     section:nth-child(3) {
@@ -415,25 +415,25 @@ body {
                     }
                     // Console Tabs
                     section:nth-child(5) {
-                        background-color: $t1;
+                        background-color: $tu1;
                         button {
-                            background-color: $tu3;
-                            color: $tuX;                            
+                            background-color: $atd6;
+                            color: $atd2;
                         }
                     }
                 }
                 div {
                     // Desk
                     .consoleDesk {
-                        background-color: $t3;
-                        color: $t7;
-                        border: 4px solid $t3;
+                        background-color: $tu1;
+                        color: $t9;
+                        border: 4px solid $tu1;
                         b {
-                            color: $t0;
+                            color: $t5;
                         }
                         hr {border: 1px solid $t0;}
                         &::-webkit-scrollbar-button {
-                            background-color: $t0;
+                            background-color: $tu3;
                         }
                         &::-webkit-scrollbar-thumb {
                             background-color: $tu6;
@@ -1402,18 +1402,18 @@ body {
                 div {
                     // Desk
                     .consoleDesk {
-                        background-color: $t3;
-                        color: $t7;
-                        border: 4px solid $t3;
+                        background-color: $ad6;
+                        color: $ad1;
+                        border: 4px solid $ad6;
                         b {
-                            color: $t0;
+                            color: $ad0;
                         }
-                        hr {border: 1px solid $t0;}
+                        hr {border: 1px solid $ad0;}
                         &::-webkit-scrollbar-button {
-                            background-color: $t0;
+                            background-color: $ad0;
                         }
                         &::-webkit-scrollbar-thumb {
-                            background-color: $tu6;
+                            background-color: $adX;
                         }
                     }
             
@@ -1838,6 +1838,18 @@ body {
                                 button:nth-child(1) {margin-left: 4px;}
                                 &::-webkit-scrollbar {display: none;}
                             }
+                            // Console Close
+                            section:nth-child(6) {
+                                grid-area: consoleClose;
+                                width: 30px;
+                                height: 30px;
+                                button {
+                                    width: 22px;
+                                    height: 22px;
+                                    margin: 4px;
+                                }
+                            }
+
                         }
                         div {
                             grid-area: body;
@@ -2187,6 +2199,18 @@ body {
                                 button:nth-child(1) {margin-left: 4px;}
                                 &::-webkit-scrollbar {display: none;}
                             }
+                            // Console Close
+                            section:nth-child(6) {
+                                grid-area: consoleClose;
+                                width: 30px;
+                                height: 30px;
+                                button {
+                                    width: 22px;
+                                    height: 22px;
+                                    margin: 4px;
+                                }
+                            }
+
                         }
                         div {
                             grid-area: body;
@@ -2410,6 +2434,9 @@ body {
                 // Console
                 .console {
                     // display: none;
+                    transition: top 1s, left 1s, bottom 1s, right 1s;
+                    // right: 150vw;
+                    // background-color: red;
                     
                     
                     main {
@@ -2509,7 +2536,19 @@ body {
                                     
                                 }
                                 button:nth-child(1) {margin-left: 4px;}
+                                button:last-child {margin-right: 4px;}
                                 &::-webkit-scrollbar {display: none;}
+                            }
+                            // Console Close
+                            section:nth-child(6) {
+                                grid-area: consoleClose;
+                                width: 30px;
+                                height: 30px;
+                                button {
+                                    width: 22px;
+                                    height: 22px;
+                                    margin: 4px;
+                                }
                             }
                         }
                         div {
@@ -3074,11 +3113,11 @@ body {
                 div {
                     .consoleDesk {
                         width: calc(100% - 16px);
-                        height: calc(50% - 12px);
+                        height: calc(25% - 12px);
                     }
                     .consoleSidebar {
                         width: calc(100% - 16px);
-                        height: calc(50% - 16px);
+                        height: calc(75% - 16px);
                     }
                 }
             }
@@ -3090,7 +3129,7 @@ body {
                     }
                     .consoleSidebar {
                         width: calc(100% - 16px);
-                        height: calc(50% - 16px);
+                        height: calc(75% - 16px);
                     }
                 }
             }
